--- a/index.html
+++ b/index.html
@@ -132,11 +132,17 @@
         </div>
     </section>
 
-
-
-
-
-
+    <!-- Mobile Waitlist Section -->
+    <section class="mobile-waitlist">
+        <h2>Join the Waitlist</h2>
+        <p>Be the first to know when Fifteen launches</p>
+        <div class="waitlist-form-inline">
+            <form onsubmit="handleWaitlistSubmit(event)">
+                <input type="email" name="email" placeholder="Enter your email" required>
+                <button type="submit" class="btn-primary">Join Waitlist</button>
+            </form>
+        </div>
+    </section>
 
     <script src="script.js"></script>
 </body>
